discussion/kv_engine/140922/140922_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: MB-42795: Switch magma memory accounting to use memory guards

Change-Id: Ia17996352f0a97c54bb06f06bd81a491d124577b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-11-30 03:02:34.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-30 03:34:39.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32195/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(496): error C2039: "ArenaClient": is not a member of "magma::Magma::Config" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32195/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27760/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27760/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5967/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:32: error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
        configuration.magmaCfg.ArenaClient = currEngine->getArenaMallocClient();
                               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5967/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:32:
error: no member named "ArenaClient" in "magma::Magma::Config" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5967/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6490/ : FAILURE

Compile error at [2020-11-30T03:04:41.875Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6490/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7807/ : FAILURE

Compile error at [2020-11-30T03:15:03.770Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7807/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7526/ : FAILURE

Compile error at [2020-11-30T03:04:12.101Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:32:
error: ?struct magma::Magma::Config? has no member named ?ArenaClient?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7526/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15349/ : FAILURE

Compile error at [2020-11-30T03:09:14.319Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:496:32:
error: no member named "ArenaClient" in "magma::Magma::Config"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15349/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4501/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7419/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
